@@ -86,21 +86,22 @@ if(null != numMedalsStr && !"".equals(numMedalsStr) && !"null".equals(numMedalsS
     <c:if test="${not empty param.addTeam}" var="addingTeam">
                 added a team
 <%
-      pageContext.setAttribute("dup", Queries.addTeam(connection,
-                                   teamNumber,
-                                   request.getParameter("teamName"),
-                                   request.getParameter("organization"),
-                                   request.getParameter("region"),
-                                   division,
-                                   numMedals));
+   if(null != Queries.addTeam(connection,
+                                     teamNumber,
+                                     request.getParameter("teamName"),
+                                     request.getParameter("organization"),
+                                     request.getParameter("region"),
+                                     division,
+                                     numMedals)) {
 %>
-      <c:if test="${null != dup}">
         <c:redirect url='index.jsp'>
           <c:param name='message'>
-            <font color='red'>Error, team number <%=teamNumber%> is already assigned to <c:out value="${dup}"/>.</font>
+            <font color='red'>Error, team number <%=teamNumber%> is already assigned..</font>
           </c:param>
         </c:redirect>
-      </c:if>
+<%
+   }
+%>
 
       <a href="index.jsp">Normally you'd be redirected here</a>
       <c:redirect url='index.jsp' />
